2005-10-13  Vincent Noel  <vnoel@cox.net>

	* logview.c (CreateMainWin): Don't put whitespace before
	colon. Fix bug #318602.

2005-10-13  Vincent Noel <vnoel@cox.net>

	* log_repaint.c: (handle_selection_changed_cb): When selecting
	lines, don't go through all the log to find matches, it's way too
	slow. Be smarter. Fix bug #318609.

2005-10-13  Vincent Noel <vnoel@cox.net>

	* logrtns.c: (CloseLog):
	* logview.c: (loglist_selection_changed), (CreateMainWin),
	(logview_calendar_set_state): Don't hide the calendar when the log
	has no dates - it makes the widgets move around. Insensitize it instead.

2005-10-13  Vincent Noel <vnoel@cox.net>

	* log_repaint.c: (handle_selection_changed_cb):
	* logrtns.c: (ParseLine), (CloseLog):
	* logview.h: Don't use a fixed-size buffer for log strings. Cut
	memory use by >30% in most cases.

2005-10-13  Frederic Crozat  <fcrozat@mandriva.com>

	* logrtns.c: (isLogFile): Only accept regular file as
	logfile, prevent freeze when /dev/tty* is in syslog.conf.
	Bug #318689.

2005-10-13  Frederic Crozat  <fcrozat@mandriva.com>

	* logrtns.c: (isLogFile): Don't try to close file which
	failed to open.

2005-10-12  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c: (tree_view_columns_set_visible),
	(model_fill_date_iter), (model_fill_iter),
	(logview_add_new_log_lines), (logview_show_model),
	(log_scroll_and_focus_path), (logview_create_model_no_date),
	(logview_create_model), (log_repaint):
	* logview.c: (logview_add_logs_from_names), (main),
	(CreateMainWin):
	* logview.h: Massive refactoring of the drawing function. Massive
	speedup when showing big logs (>20K lines).

2005-10-12  Vincent Noel <vnoel@cox.net>

	* logview.c: (main), (CreateMainWin):
	Make the interface at least a bit responsive during initial
	loading of logs.

2005-10-12  Vincent Noel <vnoel@cox.net>

	* Makefile.am:
	* logview.c: (main), (LoadLogMenu):
	* logview.h: While I'm cleaning up, remove the actions.[ch] and