@@ -1,5 +1,10 @@
 2005-10-13  Vincent Noel  <vnoel@cox.net>
 
+	* log_repaint.c (handle_selection_changed_cb): When selecting a
+	log line, select the associated day in the calendar. Fix bug #310110.
+
+2005-10-13  Vincent Noel  <vnoel@cox.net>
+
 	* logview.c (CreateMainWin): Don't put whitespace before
 	colon. Fix bug #318602.
 
